fixed extra space coming from shadow on page element

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ body {
 	font-style: normal;
 	font-weight: 300;
 	line-height: 21px;
+	overflow-x: hidden;
 	color: $grey !important;
 	&.home {
 		.storefront-pagination {
